--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An interactive To-do list with Webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --env=jsdom",
     "start": "webpack serve --open",
     "build": "webpack"
   },
@@ -20,6 +20,9 @@
   },
   "homepage": "https://github.com/mertkantaroglu/To-Do-List-with-Webpack#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
@@ -36,7 +39,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
